--- a/front-pcs/public/index.html
+++ b/front-pcs/public/index.html
@@ -4,17 +4,17 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <link rel="icon" sizes="192x192" href="/public/images/logo2.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="keywords" content="iheggaren, ihaggarene, association, enfants, solidarité, culture, kabyle, berbere, village, toudja, bejaia, algerie, france">
-        <meta name="description" content="Association iheggaren (ihaggarene) est une organisation de solidarité kabyle, de béjaia, elle promeut la culture, la solidarité entre les enfants d'iheggaren">
+        <meta name="keywords" content="Paris Caretaker Services, PCS, ESGI">
+        <meta name="description" content="Paris Caretaker Services, Projet ESGI">
         <meta name="robots" content="index, follow">
-        <title>bleme</title>
-        <link rel="canonical" href="https://iheggaren.bleme.fr">
-        <meta property="og:title" content="Iheggaren">
-        <meta property="og:url" content="https://iheggaren.bleme.fr">
-        <meta property="og:site_name" content="Iheggaren">
+        <title>PCS Esgi</title>
+        <link rel="canonical" href="https://pcs.fr">
+        <meta property="og:title" content="pcs">
+        <meta property="og:url" content="https://pcs.fr">
+        <meta property="og:site_name" content="Pcs">
         <meta property="og:type" content="website">
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="iheggaren">
+        <meta name="twitter:title" content="pcs">
         <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baloo|Roboto:300,400,500,700"> -->
       </head>
       <body>
